--- a/airMonitor/templates/airMonitor/comparisons.html
+++ b/airMonitor/templates/airMonitor/comparisons.html
@@ -165,7 +165,7 @@
 			<div class="col-md-6 bg-warning mr-1 table-responsive"> 
 				{% if sList1 %}
 				<table class="table table-striped table-bordered table-hover align-middle caption-top w-100" style="text-align: center;">
-					<caption style="text-align:center; color: black;"> Comparisons </caption>
+					<caption style="text-align:center; color: red;"> <b>Sensor 1 </b> </caption>
 					<thead class="table-danger">
 						<tr>
 							<th>ID</th>
@@ -191,7 +191,7 @@
 			</div>
 			<div class="col-md-6 bg-warning mr-2 table-responsive"> 
 				<table class="table table-striped table-bordered table-hover align-middle caption-top w-100" style="text-align: center;">
-					<caption style="text-align:center; color: black;"> Sensor 1 </caption>
+					<caption style="text-align:center; color: blue; "> <b>Sensor 2 </b> </caption>
 					<thead class="table-danger">
 						<tr>
 							<th>ID</th>
@@ -214,11 +214,214 @@
 						</td>	
 					</tr>
 				</table>
-			{%else %}
+			{% else %}
 				<h2> Submit two sensors to see comparisons </h2>
 			{% endif %}
 			</div>
 			
 		</div>
 	</div>
+
+{% if sType == "SDS011" %}
+<div id="container" style="margin:0 auto; width:100%;">
+	<canvas id="line-chart"></canvas>
+</div>
+<div id="container" style="margin:0 auto; width:100%;">
+	<canvas id="line-chart2"></canvas>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+<script>
+	var config = {
+		type: 'line',
+		data: {
+			datasets: [{
+				data: {{ p1List1|safe }},
+				borderColor: 'red',
+				backgroundColor: "rgba(0,0,0,0)",
+				label: 'Sensor 1 : P1'
+			},
+			{
+				data: {{ p2List1|safe }},
+				borderColor: 'blue',
+				backgroundColor: "rgba(0,0,0,0)",
+				label: 'Sensor 1 : P2'
+			}],
+			labels: {{ labelList|safe }}
+		},
+		options: {
+			responsive: true
+		}
+	};
+	var config2 = {
+		type: 'line',
+		data: {
+			datasets: [{
+				data: {{ p1List2|safe }},
+				borderColor: 'red',
+				backgroundColor: "rgba(0,0,0,0)",
+				label: 'Sensor 2 : P1'
+			},
+			{
+				data: {{ p2List2|safe }},
+				borderColor: 'blue',
+				backgroundColor: "rgba(0,0,0,0)",
+				label: 'Sensor 2 : P2'
+			}],
+			labels: {{ labelList|safe }}
+		},
+		options: {
+			responsive: true
+		}
+	};
+	window.onload = function() {
+		var ctx = document.getElementById('line-chart').getContext('2d');
+		window.myLine = new Chart(ctx, config);
+		var ctx2 = document.getElementById('line-chart2').getContext('2d');
+		window.myLine2 = new Chart(ctx2, config2);				
+	};
+</script>
+{% elif sType == "BME280" %}
+<div id="container" style="margin:0 auto; width:80%;">
+	<canvas id="line-chart1"></canvas>
+</div>
+<div id="container2" style="margin:0 auto; width: 80%;">
+	<canvas id="line-chart2"></canvas>
+</div>
+<div id="container3" style="margin:0 auto; width: 80%;">
+	<canvas id="line-chart3"></canvas>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+<script>
+	var config1 = {
+		type: 'line',
+		data: {
+			datasets: [{
+				data: {{ tempList1|safe }},
+				borderColor: 'red',
+				backgroundColor: "rgba(0,0,0,0)",
+				label: 'Sensor 1 : Temperature'
+			},{
+				data: {{ tempList2|safe }},
+				borderColor: 'blue',
+				backgroundColor: "rgba(0,0,0,0)",
+				label: 'Sensor 2 : Temperature'
+			}],
+			labels: {{ labelList|safe }}
+		},
+		options: {
+			responsive: true
+		}
+	};
+	var config2 = {
+		type: 'line',
+		data: {
+			datasets: [{
+				data: {{ humList1|safe }},
+				borderColor: 'red',
+				backgroundColor: "rgba(0,0,0,0)",
+				label: 'Sensor 1 : Humidity'
+			},{
+				data: {{ humList2|safe }},
+				borderColor: 'blue',
+				backgroundColor: "rgba(0,0,0,0)",
+				label: 'Sensor 2 : Humidity'
+			}],
+			labels: {{ labelList|safe }}
+		},
+		options: {
+			responsive: true
+		}
+	};
+	var config3 = {
+		type: 'line',
+		data: {
+			datasets: [{
+				data: {{ pressList1|safe }},
+				borderColor: 'red',
+				backgroundColor: "rgba(0,0,0,0)",
+				label: 'Sensor 1 : Pressure'
+			},{
+				data: {{ pressList2|safe }},
+				borderColor: 'blue',
+				backgroundColor: "rgba(0,0,0,0)",
+				label: 'Sensor 2 : Pressure'
+			}],
+			labels: {{ labelList|safe }}
+		},
+		options: {
+			responsive: true
+		}
+	};
+	window.onload = function() {
+		var ctx1 = document.getElementById('line-chart1').getContext('2d');
+		window.myLine1 = new Chart(ctx1, config1);	
+		var ctx2 = document.getElementById('line-chart2').getContext('2d');
+		window.myLine2 = new Chart(ctx2, config2);	
+		var ctx3 = document.getElementById('line-chart3').getContext('2d');
+		window.myLine3 = new Chart(ctx3, config3);	
+	};
+</script>
+{% elif sType == "DHT22" %}
+<div id="container" style="margin:0 auto; width:80%;">
+	<canvas id="line-chart1"></canvas>
+</div>
+<div id="container2" style="margin:0 auto; width: 80%;">
+	<canvas id="line-chart2"></canvas>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+<script>
+	var config1 = {
+		type: 'line',
+		data: {
+			datasets: [{
+				data: {{ tempList1|safe }},
+				borderColor: 'red',
+				backgroundColor: "rgba(0,0,0,0)",
+				label: 'Sensor 1 : Temperature'
+			},{
+				data: {{ tempList2|safe }},
+				borderColor: 'blue',
+				backgroundColor: "rgba(0,0,0,0)",
+				label: 'Sensor 2 : Temperature'
+			}],
+			labels: {{ labelList|safe }}
+		},
+		options: {
+			responsive: true
+		}
+	};
+	var config2 = {
+		type: 'line',
+		data: {
+			datasets: [{
+				data: {{ humList1|safe }},
+				borderColor: 'red',
+				backgroundColor: "rgba(0,0,0,0)",
+				label: 'Sensor 1 : Humidity'
+			},{
+				data: {{ humList2|safe }},
+				borderColor: 'blue',
+				backgroundColor: "rgba(0,0,0,0)",
+				label: 'Sensor 2 : Humidity'
+			}],
+			labels: {{ labelList|safe }}
+		},
+		options: {
+			responsive: true
+		}
+	};
+
+	window.onload = function() {
+		var ctx1 = document.getElementById('line-chart1').getContext('2d');
+		window.myLine1 = new Chart(ctx1, config1);	
+		var ctx2 = document.getElementById('line-chart2').getContext('2d');
+		window.myLine2 = new Chart(ctx2, config2);	
+	};
+</script>
+{% else %}
+<h1 style="margin:0 auto; text-align: center">No comparison made</h1>
+{% endif %}
+
 {% endblock %}
