--- a/airMonitor/templates/airMonitor/base.html
+++ b/airMonitor/templates/airMonitor/base.html
@@ -23,8 +23,7 @@
 	<link href='https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.css' rel='stylesheet' />
 
 </head>
-<body>
-    
+<body class="d-flex flex-column min-vh-100">    
     <!-- navigation bar -->
     <nav class="navbar navbar-expand-sm mb-3 bg-dark navbar-dark">
         <div class="container bg-danger p-2">
@@ -74,13 +73,10 @@
     {% block content %}
     {% endblock %} 
 
-    <div class="container bg-primary my-3">
-        <div class="row">
-            <footer class="text-white text-center">
-                FOOTER
-            </footer>
-        </div>
-    </div>
+    <footer class="mt-auto bg-warning p-3 text-center"> 
+        FOOTER 
+    </footer>
+
 
 </body>
 </html>
