--- a/airMonitor/templates/airMonitor/base.html
+++ b/airMonitor/templates/airMonitor/base.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- css and js links -->
-    <!-- <link rel="stylesheet" type="text/css" href="/static/map.css"> -->
+    <link rel="stylesheet" type="text/css" href="/static/map.css">
     <!-- <script type="text/javascript" src="static/map.js"></script> -->
 
     <!-- Latest compiled JavaScript -->
