--- a/airMonitor/templates/airMonitor/comparisons.html
+++ b/airMonitor/templates/airMonitor/comparisons.html
@@ -169,17 +169,41 @@
 					<thead class="table-danger">
 						<tr>
 							<th>ID</th>
-							<th>Longitude</th>
-							<th>Latitude</th>
-							<th>Installation ID</th>
+							<th>Location ID</th>
+							<th>Location</th>
 							<th>Details...</th>
 						</tr>
 					</thead>
 					<tr>
 						<td>{{sList1.sensorID}}</th>
-						<td>{{sList1.longitude}}</th>
-						<td>{{sList1.latitude}}</th>
 						<td>{{sList1.location_id}}</th>
+						<td><div id='map' style='width: 200px; height: 200px; '>
+							<script>
+							    mapboxgl.accessToken = 'pk.eyJ1IjoieGVudGVycmEiLCJhIjoiY2w0NW4wOHBzMDA3NDNrczA5bHVwaHZqbyJ9.-vV70Us_kN66fPKzCGSLxg';
+							    var map = new mapboxgl.Map({
+							    	container: 'map',
+							    	style: 'mapbox://styles/mapbox/streets-v11',
+							    	center: [{{sList1.longitude}}, {{sList1.latitude}}],
+							    	zoom: 10,
+							    });
+							    var idList = {{idList}};
+							    var longitudeList = {{longList}};
+							    var latitudeList = {{latList}};
+							    var listLength = {{lLength}};
+							    var idArray = JSON.parse("[" + idList + "]");
+							    var longArray = JSON.parse("[" + longitudeList + "]");
+							    var latArray = JSON.parse("[" + latitudeList + "]");
+							    for (let r=0; r<listLength; r++){								
+							        finalHTML = ""+{{sList1.longitude}}+","+{{sList1.latitude}}+""
+							        popup = new mapboxgl.Popup({ offset: 25 })
+							        .setHTML(finalHTML);
+							        marker = new mapboxgl.Marker()
+							        .setLngLat([longArray[r],latArray[r]])
+							        .setPopup(popup)
+							        .addTo(map);
+							    }
+							</script>	
+						</div></td>
 						<td>
 							<form method="POST" action="/sensor/">
 								{% csrf_token %}
@@ -191,21 +215,45 @@
 			</div>
 			<div class="col-md-6 bg-warning mr-2 table-responsive"> 
 				<table class="table table-striped table-bordered table-hover align-middle caption-top w-100" style="text-align: center;">
-					<caption style="text-align:center; color: blue; "> <b>Sensor 2 </b> </caption>
+					<caption style="text-align:center; color: blue;"> <b>Sensor 2 </b> </caption>
 					<thead class="table-danger">
 						<tr>
 							<th>ID</th>
-							<th>Longitude</th>
-							<th>Latitude</th>
-							<th>Installation ID</th>
+							<th>Location ID</th>
+							<th>Location</th>
 							<th>Details...</th>
 						</tr>
 					</thead>
 					<tr>
 						<td>{{sList2.sensorID}}</th>
-						<td>{{sList2.longitude}}</th>
-						<td>{{sList2.latitude}}</th>
 						<td>{{sList2.location_id}}</th>
+						<td><div id='map2' style='width: 200px; height: 200px; '>
+							<script>
+							    mapboxgl.accessToken = 'pk.eyJ1IjoieGVudGVycmEiLCJhIjoiY2w0NW4wOHBzMDA3NDNrczA5bHVwaHZqbyJ9.-vV70Us_kN66fPKzCGSLxg';
+							    var map = new mapboxgl.Map({
+							    	container: 'map2',
+							    	style: 'mapbox://styles/mapbox/streets-v11',
+							    	center: [{{sList2.longitude}}, {{sList2.latitude}}],
+							    	zoom: 10,
+							    });
+							    var idList = {{idList2}};
+							    var longitudeList = {{longList2}};
+							    var latitudeList = {{latList2}};
+							    var listLength = {{lLength}};
+							    var idArray = JSON.parse("[" + idList + "]");
+							    var longArray = JSON.parse("[" + longitudeList + "]");
+							    var latArray = JSON.parse("[" + latitudeList + "]");
+							    for (let r=0; r<listLength; r++){								
+							        finalHTML = ""+{{sList2.longitude}}+","+{{sList2.latitude}}+""
+							        popup = new mapboxgl.Popup({ offset: 25 })
+							        .setHTML(finalHTML);
+							        marker = new mapboxgl.Marker()
+							        .setLngLat([longArray[r],latArray[r]])
+							        .setPopup(popup)
+							        .addTo(map);
+							    }
+							</script>	
+						</div></td>
 						<td>
 							<form method="POST" action="/sensor/">
 								{% csrf_token %}
