--- a/airMonitor/templates/airMonitor/base.html
+++ b/airMonitor/templates/airMonitor/base.html
@@ -16,7 +16,9 @@
 
     <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
+    <!-- JavaScript: For displaying charts  -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script> 
+    
 
     <!-- For displaying map -->
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.js'></script>
@@ -26,7 +28,7 @@
 <body class="d-flex flex-column min-vh-100">    
     <!-- navigation bar -->
     <nav class="navbar navbar-expand-sm mb-3 bg-dark navbar-dark">
-        <div class="container bg-danger p-2">
+        <div class="container p-2">
 
             <!-- logo -->
             <a class="navbar-brand text-primary" href=""> LOGO 
@@ -46,13 +48,13 @@
 
                     <!-- links -->
                     <li class="nav-item">
-                        <a class="nav-link text-warning" href="/" name="homeLink"> Home </a>
+                        <a class="nav-link text-white" href="/" name="homeLink"> Home </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-warning" href="/sensorListPage" name="listLink"> Sensor List </a>
+                        <a class="nav-link text-white" href="/sensorListPage" name="listLink"> Sensor List </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-warning" href="/comparisons" name="comparisonLink"> Comparisons </a>
+                        <a class="nav-link text-white" href="/comparisons" name="comparisonLink"> Comparisons </a>
                     </li>
                     
                     <!-- others 
@@ -73,8 +75,8 @@
     {% block content %}
     {% endblock %} 
 
-    <footer class="mt-auto bg-warning p-3 text-center"> 
-        FOOTER 
+    <footer class="mt-auto p-3 text-center" style="background-color: lightgrey;"> 
+        ECHO 2022 
     </footer>
 
 
