--- a/airMonitor/templates/airMonitor/index.html
+++ b/airMonitor/templates/airMonitor/index.html
@@ -7,10 +7,10 @@
 <!-- container(s) -->
 
 <!-- Container 1: map -->
-<div class="container bg-primary text-center">
+<div class="container text-center">
     <div class="row">
         <div class="col-md-12 col-sm-12 col-xs-12">  
-            <div id='map' style='width: 100%; height: 550px;'>
+            <div id='map' style='width: 100%; height: 700px;'>
                 <script>
                     mapboxgl.accessToken = 'pk.eyJ1IjoieGVudGVycmEiLCJhIjoiY2w0NW4wOHBzMDA3NDNrczA5bHVwaHZqbyJ9.-vV70Us_kN66fPKzCGSLxg';
 
@@ -54,19 +54,19 @@
     </div>
 </div>
 
-<!-- Container 2: search and results -->
-<div class="container my-3 bg-danger">
+<!-- Container 2: search and results 
+<div class="container my-3">
     <div class="row"> 
-        <!-- Column 1: search -->
-        <div class="col-md-3 bg-info" style="text-align: center;"> 
+        
+        <div class="col-md-3" style="text-align: center;"> 
             <form action="" method="post">
                 {% csrf_token %}
-                <!-- Row 1: title and subtitle -->
-                <div class="row bg-success">
+                
+                <div class="row">
                     <h4> Quick Search </h4>
                 </div>
-                <!-- Row 2: search bar -->
-                <div class="row bg-warning">
+                
+                <div class="row">
                     <div class="col-md-4">
                         <label for="sID_1" class="col-form-label"> Sensor ID: </label>
                     </div>
@@ -80,17 +80,17 @@
             </form> 
         </div>
 
-        <!-- Column 2: results -->
+        
         <div class="col" style="text-align: center;">
-            <!-- Row 1: title -->
-            <div class="row bg-danger" >
+            
+            <div class="row" >
                 <h4> Search Results </h4>
             </div>
-            <!-- Row 2: search results -->
-            <div class="row bg-success"> 
+            
+            <div class="row"> 
                 {% if sensors %}
                 <table class="table table-striped table-hover align-middle caption-top">
-                    <caption style="text-align:center; color: black;"> Sensor Information </caption>
+                    
                     <thead class="table-secondary">
                         <tr>
                             <th> Sensor ID </th>
@@ -110,7 +110,7 @@
                             <td>
                                 <form method="POST" action="/sensor/">
                                     {% csrf_token %}
-                                    <button class="selectButton btn btn-danger" id="Selection" name="Selection" value={{ result.sensorID }} >More Details</button>
+                                    <button class="selectButton btn btn-primary" id="Selection" name="Selection" value={{ result.sensorID }} >More Details</button>
                                 </form>
                             </td>	
                         </tr>
@@ -120,8 +120,8 @@
                 {% endif %}
             </div>
         </div>
-    </div>
-</div>
+    </div> 
+</div> -->
 
 
 {% endblock %}
