--- a/airMonitor/templates/airMonitor/sensorListPage.html
+++ b/airMonitor/templates/airMonitor/sensorListPage.html
@@ -4,41 +4,58 @@
 
 {% block content %}
 <h1 name="listPage"></h1>
+
 <!-- Container 1: search bar -->
-<div class="container my-3 bg-success">
-	<div class="row bg-warning">
+<div class="container my-3">
+	<div class="row">
 		<!-- search bar -->
-		<!-- <h1> All Sensor List </h1> -->
-		<form action="/sensorListPage/" method="POST" class="form-inline">
+		<form action="/sensorListPage/" method="POST" class="form-inline align-middle"> 
 			{% csrf_token %}
-			<p> Search for a sensor by its: </p>
-			<input type="radio" id="sensorID" name="searchType" value="sensorID" checked>
-			<label for="sensorID"> SensorID </label>
-			<input type="radio" id="longitude" name="searchType" value="longitude">
-			<label for="longitude"> Longitude </label>
-			<input type="radio" id="latitude" name="searchType" value="latitude">
-			<label for="latitude"> Latitude </label>
-			<input type="radio" id="installDate" name="searchType" value="installDate">
-			<label for="installDate"> Install Date </label> <br>
-			<input type="text" name="criteria" placeholder="Enter search..." style="width: 15%;">
+			<div class="row"> 
+
+				<!-- text -->
+				<div class="col-md-2 col-form-label">
+					<label> Search for a sensor by its: </label>
+				</div>
+
+				<!-- search selection: radios -->
+				<div class="col-md-4 col-form-label text-center"> 
+					<input type="radio" id="sensorID" name="searchType" value="sensorID" checked>
+					<label for="sensorID" class="form-check-label"> SensorID </label>
+
+					<input type="radio" id="longitude" name="searchType" value="longitude">
+					<label for="longitude"> Longitude </label>
+
+					<input type="radio" id="latitude" name="searchType" value="latitude">
+					<label for="latitude"> Latitude </label>
+					
+					<input type="radio" id="installDate" name="searchType" value="installDate">
+					<label for="installDate"> Install Date </label> <br>
+				</div>
+
+				<!-- input -->
+				<div class="col align-self-center">
+					<input type="text" name="criteria" placeholder="Enter search..." style="width: 50%;">
+				</div>
+			</div>
 		</form>
 	</div>
 </div>
 
 <!-- Container 2: sensor list -->
-<div class="container bg-dark my-3">
-	<div class="row bg-info">
+<div class="container my-3">
+	<div class="row">
 		<div class="col table-responsive"> 
 			<table class="table table-striped table-bordered table-hover align-middle caption-top w-100" style="text-align: center;">
 				<caption style="text-align:center; color: black;"> All Sensors </caption>
-				<thead class="table-danger">
+				<thead class="table-secondary">
 					<tr>
 						<th> Sensor ID </th>
 						<th> Longitude </th>
 						<th> Latitude </th>
 						<th> Sensor Type </th>
-						<th> Data Type 1 </th><th> Data Type 2 </th><th> Data Type 3 </th>
 						<th> Details </th>
+						<th> Example </th><th> Example </th><th> Example </th><th> Example </th><th> Example </th>
 					</tr>
 				</thead>
 				<tbody> 
@@ -48,21 +65,13 @@
 						<td> {{sensor.longitude}} </td>
 						<td> {{sensor.latitude}} </td>
 						<td> {{sensor.sensorType}} </td>
-						{% if sensor.sensorType == "SDS011" %}
-						<td> P1 </td><td> P2 </td><td> - </td>
-						{% elif sensor.sensorType == "BME280" %}
-						<td> Temperature </td><td> Humidity </td><td> Pressure </td>
-						{% elif sensor.sensorType == "DHT22" %}						
-						<td> Temperature </td><td> Humidity </td><td> - </td>
-						{% else %}
-						<td> ERROR </td><td> ERROR </td><td> ERROR </td>
-						{% endif %}
 						<td> 
 							<form method="POST" action="/sensor/">
 								{% csrf_token %}
 								<button class="selectButton btn btn-primary" id="Selection" name="Selection" value={{ sensor.sensorID }} > More Details </button>
 							</form> 
 						</td>
+						<td> Example </td><td> Example </td><td> Example </td><td> Example </td><td> Example </td>
 					</tr>
 					{% endfor %}
 				</tbody>
