--- a/airMonitor/templates/airMonitor/sensor_BME.html
+++ b/airMonitor/templates/airMonitor/sensor_BME.html
@@ -3,80 +3,98 @@
 {% block title %} BME280 Sensor {% endblock %}
 
 {% block content %}
-<h1 name="BMEdetailsPage"></h1>
 
-<div>
-	<table class="table table-striped table-bordered table-hover align-middle caption-top w-100" style="text-align: center;">
-				<caption style="text-align:center; color: black;"> <h1>Sensor Information </h1> </caption>
-				<thead class="table-danger">
-					<tr>
-						<th> Sensor ID </th>
-						<td>{{ sType.sensorID }}</td>
-					</tr>
-					<tr>
-						<th> Location ID </th>
-						<td>{{ sType.location_id }}</td>
-					</tr>
-					<tr>
-						<th>Map Location: </th>
-						<td><div id='map' style='width: 200px; height: 200px; '>
-							    <script>
-							        mapboxgl.accessToken = 'pk.eyJ1IjoieGVudGVycmEiLCJhIjoiY2w0NW4wOHBzMDA3NDNrczA5bHVwaHZqbyJ9.-vV70Us_kN66fPKzCGSLxg';
-							        var map = new mapboxgl.Map({
-							        	container: 'map',
-							        	style: 'mapbox://styles/mapbox/streets-v11',
-							        	center: [{{sType.longitude}}, {{sType.latitude}}],
-							        	zoom: 10,
-							        });
-							        var idList = {{idList}};
-							        var longitudeList = {{longList}};
-							        var latitudeList = {{latList}};
-							        var listLength = {{lLength}};
-							        var idArray = JSON.parse("[" + idList + "]");
-							        var longArray = JSON.parse("[" + longitudeList + "]");
-							        var latArray = JSON.parse("[" + latitudeList + "]");
-							        for (let r=0; r<listLength; r++){								
-							            finalHTML = ""+{{sType.longitude}}+","+{{sType.latitude}}+""
-							            popup = new mapboxgl.Popup({ offset: 25 })
-							            .setHTML(finalHTML);
-							            marker = new mapboxgl.Marker()
-							            .setLngLat([longArray[r],latArray[r]])
-							            .setPopup(popup)
-							            .addTo(map);
-							        }
-							    </script>	
-							</div>
-						</td>
-					</tr>
-				</thead>
-				</tbody>
-			</table>
+<h1 name="SDSdetailsPage"></h1>
+
+<!-- Container 1: Sensor location and information -->
+<div class="container"> 
+	<!-- Row 1: sensor information (table) -->
+	<div class="row table-responsive"> 
+		<table class="table table-striped table-bordered table-hover align-middle caption-top w-100" style="text-align: center;">
+			<caption style="text-align:center; color: black;"> <h1> Sensor Information </h1> </caption>
+			<thead class="table-secondary align-middle">
+				<tr>
+					<th> Sensor ID </th>
+					<td>{{ sType.sensorID }}</td>
+				</tr>
+				<tr>
+					<th> Longitude </th>
+					<td> {{ sType.longitude }} </td>
+				</tr>
+				<tr>
+					<th> Latitude </th>
+					<td> {{ sType.latitude }} </td>
+				</tr>
+				<tr>
+					<th> Location ID </th>
+					<td> {{ sType.location_id }} </td>
+				</tr>
+				<tr>
+					<th> Map Location: </th>
+					<td class="col d-flex align-items-center justify-content-center">
+						<div id='map' style='width: 200px; height: 200px; '>
+							<script>
+								mapboxgl.accessToken = 'pk.eyJ1IjoieGVudGVycmEiLCJhIjoiY2w0NW4wOHBzMDA3NDNrczA5bHVwaHZqbyJ9.-vV70Us_kN66fPKzCGSLxg';
+								var map = new mapboxgl.Map({
+									container: 'map',
+									style: 'mapbox://styles/mapbox/streets-v11',
+									center: [{{sType.longitude}}, {{sType.latitude}}],
+									zoom: 10,
+								});
+								var idList = {{idList}};
+								var longitudeList = {{longList}};
+								var latitudeList = {{latList}};
+								var listLength = {{lLength}};
+								var idArray = JSON.parse("[" + idList + "]");
+								var longArray = JSON.parse("[" + longitudeList + "]");
+								var latArray = JSON.parse("[" + latitudeList + "]");
+								for (let r=0; r<listLength; r++){								
+									finalHTML = ""+{{sType.longitude}}+","+{{sType.latitude}}+""
+									popup = new mapboxgl.Popup({ offset: 25 })
+									.setHTML(finalHTML);
+									marker = new mapboxgl.Marker()
+									.setLngLat([longArray[r],latArray[r]])
+									.setPopup(popup)
+									.addTo(map);
+								}
+							</script>	
+						</div>
+					</td>
+				</tr>
+			</thead>
+		</table>
+	</div>
+
+	<!-- Row 2: data/charts selection (drop-down list) -->
+	<div class="row mb-3">
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+		<script>
+			$(document).ready(function(){
+				$("#sType").on('change',function(){
+					$(".display").hide();
+					$("#" + $(this).val()).fadeIn(200);
+				}).change();
+			});
+		</script>
+
+		<select name="sType" id="sType">
+			<option value="Live"> Live Data </option>
+			<option value="Archive"> Past Data </option>
+			<option value="Charts"> Data Charts </option>
+		</select>
+	</div>
 </div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script>
-	$(document).ready(function(){
-		$("#sType").on('change',function(){
-			$(".display").hide();
-			$("#" + $(this).val()).fadeIn(200);
-		}).change();
-	});
-</script>
 
-<select name="sType" id="sType">
-	<option value="Live"> Live Data </option>
-	<option value="Archive"> Past Data </option>
-	<option value="Charts"> Data Charts </option>
-</select>
 
-<!-- Container 3: Live Sensor Data -->
-<div class="display" id="Live">
-<div class="container bg-dark my-3" >
-	<div class="row bg-info">
+<!-- Container 2: Data or Charts --> 
+<!-- Container 2 (1): Live Data --> 
+<div class="container my-3 display" id="Live">
+	<div class="row">
 		<div class="col table-responsive"> 
 			<table class="table table-striped table-bordered table-hover align-middle caption-top w-100" style="text-align: center;">
 				<caption style="text-align:center; color: black;"> <h1>Live Sensor Data Table </h1> </caption>
-				<thead class="table-danger">
+				<thead class="table-secondary">
 					<tr>
 						<th> Timestamp </th>
 						<th> Pressure </th>
@@ -96,23 +114,57 @@
 		</div>
 	</div>
 </div>
+
+<!-- Container 2(2): past data -->
+<div class="container my-3 display" id="Archive">
+	<div class="row">
+		<div class="col table-responsive"> 
+			<table class="table table-striped table-bordered table-hover align-middle caption-top w-100" style="text-align: center;">
+				<caption style="text-align:center; color: black;"> <h1>Sensor Data Table </h1> </caption>
+				<thead class="table-secondary">
+					<tr>
+						<th> Timestamp </th>
+						<th> Pressure </th>
+						<th> Humidity </th>
+						<th> Temperature </th>
+						<th> Example </th>
+					</tr>
+				</thead>
+				<tbody> 
+					{% for sensor in results %} 
+					<tr style="text-align: center;">
+						<td> {{ sensor.timestamp }} </td> 
+						<td> {{ sensor.pressure }} </td>
+						<td> {{ sensor.humidity }} </td>
+						<td> {{ sensor.temperature}} </td>
+						<td> Example </td>
+					</tr>
+					{% endfor %}
+				</tbody>
+			</table>
+		</div>
+	</div>
 </div>
 
-<!-- Container 2: Charts -->
-<div class="display" id="Charts">
-<div id="container" style="margin:0 auto; width:80%;">
-	<caption style="text-align:center; color: black;"> <h1>Data Tables </h1> </caption>
-	<canvas id="line-chart1"></canvas>
-</div>
-<div id="container2" style="margin:0 auto; width: 80%;">
-	<canvas id="line-chart2"></canvas>
-</div>
-<div id="container3" style="margin:0 auto; width: 80%;">
-	<canvas id="line-chart3"></canvas>
-</div>
+
+<!-- Container 2(3): Charts -->
+<div class="container my-3 display" id="Charts">
+	<!-- Chart 1: Temperature -->
+	<div class="row justify-content-center" id="container">
+		<caption> <h1 style="text-align:center; color: black;"> Data Tables </h1> </caption>
+		<canvas id="line-chart1"></canvas>
+	</div>
+	<!-- Chart 2: Humidity -->
+	<div class="row my-3 justify-content-center" id="container2">
+		<canvas id="line-chart2"></canvas>
+	</div>
+	<!-- Chart 3: Pressure -->
+	<div class="row justify-content-center" id="container3">
+		<canvas id="line-chart3"></canvas>
+	</div>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+<!-- already put the link to base.html <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script> -->
 <script>
 	var config1 = {
 		type: 'line',
@@ -168,36 +220,5 @@
 		window.myLine3 = new Chart(ctx3, config3);	
 	};
 </script>
-
-<!-- Container 1: past sensor data -->
-<div class="display" id="Archive">
-<div class="container bg-dark my-3">
-	<div class="row bg-info">
-		<div class="col table-responsive"> 
-			<table class="table table-striped table-bordered table-hover align-middle caption-top w-100" style="text-align: center;">
-				<caption style="text-align:center; color: black;"> <h1>Sensor Data Table </h1> </caption>
-				<thead class="table-danger">
-					<tr>
-						<th> Timestamp </th>
-						<th> Pressure </th>
-						<th> Humidity </th>
-						<th> Temperature </th>
-					</tr>
-				</thead>
-				<tbody> 
-					{% for sensor in results %} 
-					<tr style="text-align: center;">
-						<td> {{ sensor.timestamp }} </td> 
-						<td> {{ sensor.pressure }} </td>
-						<td> {{ sensor.humidity }} </td>
-						<td> {{ sensor.temperature}} </td>
-					</tr>
-					{% endfor %}
-				</tbody>
-			</table>
-		</div>
-	</div>
-</div>
-</div>
 
 {% endblock %}
